--- a/application/raptor/localization/language/language-retrieve-modal.html
+++ b/application/raptor/localization/language/language-retrieve-modal.html
@@ -1,52 +1,91 @@
+<!-- Хэлний мэдээллийг харуулах VIEW modal -->
 <div class="modal-lg modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
+        <!-- Modal Header -->
         <div class="modal-header">
-            <h3 class="modal-title fs-6 text-uppercase text-info">{{ record['title']|e }}</h3>
+            <!-- Хэлний гарчиг -->
+            <h3 class="modal-title fs-6 text-uppercase text-info">
+                {{ record['title']|e }}
+            </h3>
+
+            <!-- Хаах товч -->
             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
         </div>
+
+        <!-- Modal Body -->
         <div class="modal-body">
+            <!-- Code -->
             <div class="row mb-2">
-                <label class="col-3 col-form-label text-end">{{ 'code'|text }}</label>
+                <label class="col-3 col-form-label text-end">
+                    {{ 'code'|text }}
+                </label>
                 <div class="col-9">
                     <input class="form-control" readonly value="{{ record['code']|e }}" type="text">
                 </div>
             </div>
+
+            <!-- Flag -->
             <div class="row mb-2">
-                <label class="col-3 col-form-label text-end">{{ 'flag'|text }}</label>
+                <label class="col-3 col-form-label text-end">
+                    {{ 'flag'|text }}
+                </label>
                 <div class="col-9">
                     {% set flag = record['code'] == 'en' ? 'us' : record['code'] %}
-                    <img src="https://flagcdn.com/40x30/{{ flag }}.png" srcset="https://flagcdn.com/80x60/{{ flag }}.png 2x" width="40" height="30">
+                    <!-- Улсын далбаа -->
+                    <img src="https://flagcdn.com/40x30/{{ flag }}.png"
+                         srcset="https://flagcdn.com/80x60/{{ flag }}.png 2x"
+                         width="40" height="30">
                 </div>
             </div>
+
+            <!-- Locale -->
             <div class="row mb-2">
                 <label class="col-3 col-form-label text-end">Locale</label>
                 <div class="col-9">
                     <input class="form-control" readonly value="{{ record['locale']|e }}" type="text">
                 </div>
             </div>
+
+            <!-- Title / Name -->
             <div class="row mb-2">
-                <label class="col-3 col-form-label text-end">{{ 'name'|text }}</label>
+                <label class="col-3 col-form-label text-end">
+                    {{ 'name'|text }}
+                </label>
                 <div class="col-9">
                     <input class="form-control" readonly value="{{ record['title']|e }}" type="text">
                 </div>
             </div>
+
+            <!-- Description -->
             <div class="row mb-2">
-                <label class="col-3 col-form-label text-end">{{ 'description'|text }}</label>
+                <label class="col-3 col-form-label text-end">
+                    {{ 'description'|text }}
+                </label>
                 <div class="col-9">
                     <input class="form-control" readonly value="{{ record['description']|e }}" type="text">
                 </div>
             </div>
+
+            <!-- Default language checkbox -->
             <div class="row mb-2">
                 <label class="col-3 col-form-label text-end">is default?</label>
                 <div class="col-9">
                     <div class="form-check form-switch pt-2">
-                        <input class="form-check-input" type="checkbox" role="switch" {{ record['is_default'] == 1 ? 'checked ' : '' }}disabled>
+                        <!-- Default хэл эсэхийг зөвхөн харах зориулалттай -->
+                        <input class="form-check-input"
+                               type="checkbox"
+                               role="switch"
+                               {{ record['is_default'] == 1 ? 'checked ' : '' }}disabled>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- Modal Footer -->
         <div class="modal-footer">
-            <button class="btn btn-info shadow-sm" data-bs-dismiss="modal" type="button">{{ 'close'|text }}</button>
+            <button class="btn btn-info shadow-sm" data-bs-dismiss="modal" type="button">
+                {{ 'close'|text }}
+            </button>
         </div>
     </div>
 </div>
