--- a/application/raptor/localization/text/text-update-modal.html
+++ b/application/raptor/localization/text/text-update-modal.html
@@ -1,90 +1,151 @@
+<!-- Текст засварлах modal -->
 <div class="modal-lg modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
+            <!-- Хүснэгтийн нэр болон мөрийн id-г харуулж админд илүү ойлгомжтой болгоно -->
             <h3 class="modal-title fs-6 text-uppercase text-primary">
                 <i class="bi bi-plus-circle"></i> {{ 'edit-record'|text }} ({{ table ~ ':' ~ record['id'] }})
             </h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
+
+            <!-- Modal-г хаах товч -->
+            <button class="btn-close" type="button"
+                    data-bs-dismiss="modal"
+                    aria-label="{{ 'close'|text|e }}"></button>
         </div>
+
         <div class="modal-body">
-            <form class="needs-validation" novalidate id="text_update" action="{{ 'text-update'|link({'table':table, 'id':record['id']}) }}" method="PUT" enctype="multipart/form-data">
+            <!-- Текст засварлах үндсэн form → fetch ашиглан PUT хүсэлт илгээнэ -->
+            <form class="needs-validation"
+                  novalidate
+                  id="text_update"
+                  action="{{ 'text-update'|link({'table':table, 'id':record['id']}) }}"
+                  method="PUT"
+                  enctype="multipart/form-data">
+                <!-- Түлхүүр үг (keyword)   -->
                 <div class="row mb-2">
                     <label class="col-3 col-form-label text-end">{{ 'keyword'|text }}</label>
                     <div class="col-9">
-                        <input class="form-control" name="keyword" required value="{{ record['keyword']|e }}" maxlength="128" placeholder="" type="text" autocomplete="off">
+                        <!-- Keyword нь текстийн unique identifier. Шаардлагатай талбар (required). -->
+                        <input class="form-control"
+                               name="keyword"
+                               required
+                               value="{{ record['keyword']|e }}"
+                               maxlength="128"
+                               autocomplete="off">
                         <div class="invalid-feedback">{{ 'field-is-required'|text }}</div>
                     </div>
                 </div>
+
+                <!-- Хэл тус бүрийн текст -->
                 {% for code,language in localization.language %}
                 <div class="row{{ loop.last ? '' : ' mb-2' }}">
                     <label class="col-3 col-form-label text-end">
                         {{ 'title'|text }} ({{ language['title'] }}
+                        <!-- Далбааны зураг → хэлний ойлгомжтой тэмдэглэгээ -->
                         {% set flag = code == 'en' ? 'us' : code %}
-                        <img src="https://flagcdn.com/20x15/{{ flag }}.png" srcset="https://flagcdn.com/40x30/{{ flag }}.png 2x" width="16" height="12" alt="{{ language['title']|e }}">)
+                        <img src="https://flagcdn.com/20x15/{{ flag }}.png"
+                             srcset="https://flagcdn.com/40x30/{{ flag }}.png 2x"
+                             width="16"
+                             height="12"
+                             alt="{{ language['title']|e }}">)
                     </label>
+
                     <div class="col-9">
-                        <textarea class="form-control" name="text[{{ code }}]" required maxlength="255">{{ record['localized']['text'][code]|e }}</textarea>
+                        <!-- LocalizedModel бүтэц:
+                             record['localized']['text'][code]
+                             Тухайн хэл дээрх текстийг засварлах талбар. -->
+                        <textarea class="form-control"
+                                  name="text[{{ code }}]"
+                                  required
+                                  maxlength="255">{{ record['localized']['text'][code]|e }}</textarea>
                         <div class="invalid-feedback">{{ 'field-is-required'|text }}</div>
                     </div>
                 </div>
                 {% endfor %}
             </form>
         </div>
+
         <div class="modal-footer">
+            <!-- Submit -->
             <button class="btn btn-primary update-text-submit">
                 <i class="bi bi-check"></i> {{ 'save'|text }}
             </button>
+
+            <!-- Хаах товч -->
             <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">
                 {{ 'cancel'|text }}
             </button>
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
+
     const formUpdate = document.querySelector('form#text_update');
     if (!formUpdate) {
+        /* Форм олдоогүй бол алдаа харуулна */
         NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
     } else {
+        /* Submit товч дарсан үед form.requestSubmit() дуудагдана.
+         * Энэ нь submit event → validation-г ажиллуулдаг. */
         const submitter = document.querySelector('button.update-text-submit');
         submitter.addEventListener('click', function (e) {
             e.preventDefault();
             formUpdate.requestSubmit();
         });
 
+        /* FORM SUBMIT EVENT - FETCH ашиглан PUT хүсэлт илгээдэг хэсэг */
         formUpdate.addEventListener('submit', function (event) {
             event.preventDefault();
 
+            /* HTML5 validation шалгалт */
             const _valid = this.checkValidity();
             this.classList.add('was-validated');
+
             if (!_valid) {
                 event.stopPropagation();
-                return NotifyTop('danger', `{{ 'error'|text|e }}`, `{{ 'u-have-some-form-errors'|text|e }}`);
+                return NotifyTop(
+                    'danger',
+                    `{{ 'error'|text|e }}`,
+                    `{{ 'u-have-some-form-errors'|text|e }}`
+                );
             }
 
+            /* Button grow animation → "saving..." */
             submitter.growNstop();
 
+            /* FormData → PUT хүсэлтэд илгээгдэнэ */
             const data = new FormData(this);
+            
             fetch(
                 this.action,
                 {
                     body: data,
                     method: this.getAttribute('method') ?? 'PUT'
                 }
-            ).then(res => {
+            )
+            .then(res => {
                 let contentType = res.headers.get('content-type') || '';
-                if (contentType.includes('application/json')) {
-                    return res.json();
-                }
-                throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
-            }).then(response => {
+                if (contentType.includes('application/json')) return res.json();
+                
+                throw new Error(`HTTP [${res.status}]: ${res.statusText}`);
+            })
+            .then(response => {
+                /* Backend-ээс success бус ирвэл → exception */
                 if (response.status !== 'success') {
                     throw new Error(response.message ? response.message : 'Invalid response!');
                 }
 
+                /* Амжилттай → localization dashboard хуудсыг дахин ачаална */
                 window.location.reload();
 
-                NotifyTop(response.type ?? 'success', response.title ?? `{{ 'success'|text|e }}`, response.message ?? 'Text updated');
-            }).catch(error => {
+                NotifyTop(
+                    response.type ?? 'success',
+                    response.title ?? `{{ 'success'|text|e }}`,
+                    response.message ?? 'Text updated'
+                );
+            })
+            .catch(error => {
                 NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
                 submitter.growNstop();
             });
