--- a/application/raptor/user/user-update.html
+++ b/application/raptor/user/user-update.html
@@ -433,7 +433,7 @@ document.addEventListener('DOMContentLoaded', function () {
             const contentType = res.headers.get('content-type') || '';
             if (contentType.includes('application/json')) return res.json();
 
-            throw new Error(`HTTP [${res.status}]: a${res.statusText}`);
+            throw new Error(`HTTP [${res.status}]: ${res.statusText}`);
         })
         .then(response => {
             if (response.status !== 'success') {
