--- a/application/raptor/content/file/video-tag-modal.html
+++ b/application/raptor/content/file/video-tag-modal.html
@@ -1,22 +1,62 @@
+<!--
+    📌 Video Tag Embed Code Modal
+    ------------------------------------------------------------
+    Энэ modal нь видео файлыг HTML-д байрлуулахад шаардлагатай
+    <video> tag-ийг автоматаар үүсгэн харуулдаг.
+
+    • Relative embed   → зөвхөн файл руу харьцангуй зам
+    • Absolute embed   → бүрэн URL (host + path)
+
+    copy товч → copyContent(id) функцээр тухайн <pre> блокийн
+    текстийг clipboard руу хуулахад ашиглана.
+-->
+
 <div class="modal-lg modal-dialog modal-dialog-centered">
     <div class="modal-content">
+        <!-- Modal Header -->
         <div class="modal-header">
             <h3 class="modal-title fs-6 text-uppercase text-dark">
-                <i class="bi bi-magic"></i>  Video embed code
+                <i class="bi bi-magic"></i> Video embed code
             </h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
+
+            <!-- Modal хаах товч -->
+            <button class="btn-close"
+                    type="button"
+                    data-bs-dismiss="modal"
+                    aria-label="{{ 'close'|text|e }}">
+            </button>
         </div>
+
+        <!-- Modal Body -->
         <div class="modal-body">
+            <!-- RELATIVE VIDEO EMBED CODE -->
             <strong>Relative:</strong>
+            <!-- <pre id="relative"> хэсгийн текстийг хуулна -->
             <a class="btn btn-sm btn-dark" onclick="copyContent('relative');">copy</a>
-            <pre class="border border-dark bg-secondary text-light" id="relative" style="white-space:pre-wrap">{{ ('<video height="360" controls><source src="' ~ record['path'] ~ '"></video>')|e }}</pre>
+            <!-- Харьцангуй URL бүхий <video> tag -->
+            <pre class="border border-dark bg-secondary text-light"
+                 id="relative"
+                 style="white-space:pre-wrap">{{ ('<video height="360" controls><source src="' ~ record['path'] ~ '"></video>')|e }}</pre>
+
             <hr>
+
+            <!-- ABSOLUTE VIDEO EMBED CODE -->
             <strong>Absolute:</strong>
             <a class="btn btn-sm btn-dark" onclick="copyContent('absolute');">copy</a>
-            <pre class="border border-dark bg-secondary text-light" id="absolute" style="white-space:pre-wrap">{{ ('<video height="360" controls><source src="' ~ host ~ record['path'] ~ '"></video>')|e }}</pre>
+            <!-- host + path → бүрэн URL бүхий embed код -->
+            <pre class="border border-dark bg-secondary text-light"
+                 id="absolute"
+                 style="white-space:pre-wrap">{{ ('<video height="360" controls><source src="' ~ host ~ record['path'] ~ '"></video>')|e }}</pre>
+
         </div>
+
+        <!-- Modal Footer -->
         <div class="modal-footer">
-            <button class="btn btn-dark" data-bs-dismiss="modal" type="button">{{ 'close'|text }}</button>
+            <button class="btn btn-dark"
+                    data-bs-dismiss="modal"
+                    type="button">
+                {{ 'close'|text }}
+            </button>
         </div>
     </div>
 </div>
