--- a/application/raptor/content/file/audio-tag-modal.html
+++ b/application/raptor/content/file/audio-tag-modal.html
@@ -1,22 +1,52 @@
+<!--
+    Audio tag embed code үзүүлэх зориулалттай modal.
+    Хэрэглэгч тухайн аудио файлыг HTML-д оруулах кодыг
+    Relative болон Absolute хэлбэрээр хуулж авах боломжтой.
+-->
 <div class="modal-lg modal-dialog modal-dialog-centered">
     <div class="modal-content">
+        <!-- Modal Header – гарчиг ба хаах товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6 text-uppercase text-warning">
-                <i class="bi bi-magic"></i>  Audio embed code
+                <i class="bi bi-magic"></i> Audio embed code
             </h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
+
+            <!-- Modal хаах товч -->
+            <button class="btn-close"
+                    type="button"
+                    data-bs-dismiss="modal"
+                    aria-label="{{ 'close'|text|e }}">
+            </button>
         </div>
+
+        <!-- Modal Body – аудио embed code-ийн 2 төрөл -->
         <div class="modal-body">
+            <!-- Relative embed code (host агуулаагүй зам) -->
             <strong>Relative:</strong>
             <a class="btn btn-sm btn-warning" onclick="copyContent('relative');">copy</a>
-            <pre class="border border-warning bg-dark text-light" id="relative" style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
+            <!-- Relative embed code-г үзүүлэх блок -->
+            <pre class="border border-warning bg-dark text-light"
+                 id="relative"
+                 style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
+
             <hr>
+
+            <!-- Absolute embed code (host + path) -->
             <strong>Absolute:</strong>
             <a class="btn btn-sm btn-warning" onclick="copyContent('absolute');">copy</a>
-            <pre class="border border-warning bg-dark text-light" id="absolute" style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ host ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
+            <!-- Absolute embed code-г үзүүлэх блок -->
+            <pre class="border border-warning bg-dark text-light"
+                 id="absolute"
+                 style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ host ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
         </div>
+
+        <!-- Modal Footer – хаах товч -->
         <div class="modal-footer">
-            <button class="btn btn-warning" data-bs-dismiss="modal" type="button">{{ 'close'|text }}</button>
+            <button class="btn btn-warning"
+                    data-bs-dismiss="modal"
+                    type="button">
+                {{ 'close'|text }}
+            </button>
         </div>
     </div>
 </div>
