Лавлах мэдээ модул бүрэн баримтжуулав

--- a/application/raptor/content/file/audio-tag-modal.html
+++ b/application/raptor/content/file/audio-tag-modal.html
@@ -5,7 +5,7 @@
 -->
 <div class="modal-lg modal-dialog modal-dialog-centered">
     <div class="modal-content">
-        <!-- Modal Header – гарчиг ба хаах товч -->
+        <!-- Modal Header - гарчиг ба хаах товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6 text-uppercase text-warning">
                 <i class="bi bi-magic"></i> Audio embed code
@@ -19,7 +19,7 @@
             </button>
         </div>
 
-        <!-- Modal Body – аудио embed code-ийн 2 төрөл -->
+        <!-- Modal Body - аудио embed code-ийн 2 төрөл -->
         <div class="modal-body">
             <!-- Relative embed code (host агуулаагүй зам) -->
             <strong>Relative:</strong>
@@ -40,7 +40,7 @@
                  style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ host ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
         </div>
 
-        <!-- Modal Footer – хаах товч -->
+        <!-- Modal Footer - хаах товч -->
         <div class="modal-footer">
             <button class="btn btn-warning"
                     data-bs-dismiss="modal"
