--- a/application/raptor/authentication/login.html
+++ b/application/raptor/authentication/login.html
@@ -424,11 +424,11 @@
             <div class="modal-xl modal-dialog modal-dialog-scrollable" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title text-primary text-uppercase">{{ tos['title'][lang] }}</h5>
+                        <h5 class="modal-title text-primary text-uppercase">{{ tos['title'] }}</h5>
                         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
                     </div>
                     <div class="modal-body">
-                        {{ tos['content'][lang] }}
+                        {{ tos['content'] }}
                     </div>
                     <div class="modal-footer">
                          <button class="btn btn-primary shadow-sm" data-bs-dismiss="modal" type="button">{{ 'close'|text }}</button>
@@ -444,11 +444,11 @@
             <div class="modal-xl modal-dialog modal-dialog-scrollable" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title text-primary text-uppercase">{{ pp['title'][lang] }}</h5>
+                        <h5 class="modal-title text-primary text-uppercase">{{ pp['title'] }}</h5>
                         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
                     </div>
                     <div class="modal-body">
-                        {{ pp['content'][lang] }}
+                        {{ pp['content'] }}
                     </div>
                     <div class="modal-footer">
                          <button class="btn btn-primary shadow-sm" data-bs-dismiss="modal" type="button">{{ 'close'|text }}</button>
