--- a/application/raptor/rbac/rbac-view-role-modal.html
+++ b/application/raptor/rbac/rbac-view-role-modal.html
@@ -1,8 +1,8 @@
 <!--
-    RBAC — View Role Modal
+    RBAC - View Role Modal
 
     Зорилго:
-      • Дүр (Role)–ийн товч мэдээллийг харах
+      • Дүр (Role)-ийн товч мэдээллийг харах
       • Нэр + Тайлбар л харуулна
       • Хэрэглэгч зөвхөн уншихад зориулсан modal
 
