--- a/application/raptor/user/user-update.html
+++ b/application/raptor/user/user-update.html
@@ -273,7 +273,7 @@
 <script type="text/javascript">
 /* Зураг сонгох үед ажиллах event handler → fileInput.id = "photo" */
 const onFileInput = function (fileInput) {
-    /* file input–д id байх ёстой */
+    /* file input-д id байх ёстой */
     const id = fileInput?.id;
     if (!id) {
         return NotifyTop('warning', `{{ 'error'|text|e }}`, 'File input ID заагдаагүй байна!');
