--- a/application/web/home/page.html
+++ b/application/web/home/page.html
@@ -23,7 +23,7 @@
        • content дотор HTML markup аль хэдийн аюулгүй болгоод ирсэн
 ================================================================== -->
 
-<!-- Fancybox 5.0 – UI & Viewer -->
+<!-- Fancybox 5.0 - UI & Viewer -->
 <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 <script defer src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 
@@ -73,7 +73,7 @@
 </div>
 
 <!-- ---------------------------------------------------------------
-     🔍 Fancybox binding – Зураг томруулж харах
+     🔍 Fancybox binding - Зураг томруулж харах
 ---------------------------------------------------------------- -->
 <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
