Refactor TemplateService to use LocalizedModel methods

--- a/application/dashboard/home/home.html
+++ b/application/dashboard/home/home.html
@@ -1,7 +1,7 @@
 <!-- 
     Dashboard Home - Dynamic Greeting Block
     ---------------------------------------------------------
-    Энэ хэсэг нь хэрэглэгчийн системд нэвтэрсэн цагийн байдлаас
+    Энэ жишээ хэсэг нь хэрэглэгчийн системд нэвтэрсэн цагийн байдлаас
     хамааран "Good morning / Good afternoon / Good evening"
     зэрэг мэндчилгээ динамикаар үүсгэнэ.
 
@@ -17,6 +17,7 @@
         - Хэрэглэгчийн статистикаас хамаарсан мэндчилгээ
         - Animation (Fade in, slide)
         - Хэрэглэгчийн role-д суурилсан нэмэлт мэдээлэл
+        - Ер нь дурын юу ч байж болно
 -->
 
 <div id="hello"></div>
