--- a/application/raptor/organization/organization-index.html
+++ b/application/raptor/organization/organization-index.html
@@ -45,7 +45,7 @@ document.addEventListener('DOMContentLoaded', function () {
             const contentType = res.headers.get('content-type') || '';
             if (contentType.includes('application/json')) return res.json();
             
-            throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
+            throw new Error(`HTTP [${res.status}]: ${res.statusText}`);
         })
         .then(data => {
             if (!data.list) {
